	ADDED - Cacti plugin allows adding the same map twice (more useful than it sounds)
	ADDED - Cacti plugin allows setting of map-global variables in the management UI
	ADDED - Cacti plugin allows settings of global map-global (across all maps) variables too
	ADDED - Cacti plugin adds links in 'user' pages to management screen (if you are an admin)
	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
	CHANGE- The link_bulge secret mode bulges each side of a link independently now
	FIXED - Minor issue with CRLF in map title for Cacti Plugin
	FIXED - CLI tool set --define options incorrectly.
	FIXED - Oneway links don't draw the INCOMMENT anymore
	FIXED - DEFAULT SCALE covers 0-100 properly (Thanks Dan Fusselman)
	FIXED - Scaled ICON in DEFAULT didn't get overwritten properly in nodes (Thanks Fabrizio Carusi)
	FIXED - No more floating-point imagemap coords (Thanks Trond Aspelund)
		
0.95b	FIXED - SQL schema issue that upset some mysql versions
	FIXED - Removed sometime-problem debugging code in editor
	FIXED - incorrect jquery path in cacti-picker
	FIXED - INFOURL not used without overlib
	FIXED - 'none' colours on LINKs were broken by typo.
	FIXED - NOTES, INNOTES, OUTNOTES all just flat-out borken in 0.95 and 0.95a
	FIXED - Page title can be incorrect if filehash starts with a digit.
	FIXED - Cacti plugin behaves a little better with auth disabled.

0.95a	FIXED - problem with global map variables. Oops.
	FIXED - few deprecated function references.
	FIXED - couple of tiny docs errors.
	FIXED - bug where INFOURL without OVERLIBGRAPH would be ignored
	CHANGE - Added in a SCALE line in the DEFAULT scale for between 0 and 1. Stops a lot of warnings on low-traffic links.
	CHANGE - Tweaked node cloning in editor - clone is offset in x and y now.
