@@ -12,8 +12,6 @@ $configerror = '';
 
 $config_loaded = @include_once 'editor-config.php';
 
-// XXX - if something from the old-style config is already defined by here, we need to warn.
-
 // set to TRUE to enable experimental overlay showing relative-positioning and VIAs
 $use_overlay=FALSE;
 
