@@ -196,7 +196,6 @@ foreach ($options_output as $key=>$value)
 }
 
 
-
 $weathermap_map = $configfile;
 
 if ($map->ReadConfig($configfile))
@@ -241,8 +240,9 @@ if ($map->ReadConfig($configfile))
 		
 		$fd=fopen($htmlfile, 'w');
 		fwrite($fd,
-			'<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="refresh" content="300" /><title>' . $map->title
-			. '</title></head><body>');
+			'<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>');
+		if($map->htmlstylesheet != '') fwrite($fd,'<link rel="stylesheet" type="text/css" href="'.$map->htmlstylesheet.'" />');
+		fwrite($fd,'<meta http-equiv="refresh" content="300" /><title>' . $map->title . '</title></head><body>');
 
 		if ($map->htmlstyle == "overlib")
 		{
@@ -254,9 +254,9 @@ if ($map->ReadConfig($configfile))
 
 		fwrite($fd, $map->MakeHTML());
 		fwrite($fd,
-			'<hr />Network Map created with <a href="http://www.network-weathermap.com/?vs='
+			'<hr /><span id="byline">Network Map created with <a href="http://www.network-weathermap.com/?vs='
 			. $WEATHERMAP_VERSION . '">PHP Network Weathermap v' . $WEATHERMAP_VERSION
-			. '</a></body></html>');
+			. '</a></span></body></html>');
 		fclose ($fd);
 	}
 
